--- a/models/membership/fields.yaml
+++ b/models/membership/fields.yaml
@@ -3,6 +3,5 @@
 # ===================================
 
 fields:
-    id:
-        label: ID
-        disabled: true
+    user_name:
+        label: User
