--- a/updates/version.yaml
+++ b/updates/version.yaml
@@ -6,6 +6,7 @@
     - create_status_logs_table.php
     - create_transitions_table.php
     - create_policies_table.php
+    - create_schedule_table.php
     - create_dunning_paths_table.php
 1.0.2:
     - Seed table data
