--- a/controllers/memberships/config_relation.yaml
+++ b/controllers/memberships/config_relation.yaml
@@ -9,3 +9,11 @@ invoices:
         list: $/responsiv/subscribe/models/membership/invoice_columns.yaml
         recordUrl: responsiv/pay/invoices/preview/:id
         toolbarButtons: null
+
+services:
+    label: Service
+    readOnly: true
+    view:
+        list: $/responsiv/subscribe/models/service/columns.yaml
+        recordUrl: responsiv/subscribe/services/preview/:id
+        toolbarButtons: null
