Ability to create subscriptions

--- a/models/service/columns.yaml
+++ b/models/service/columns.yaml
@@ -47,7 +47,7 @@ columns:
         type: date
         invisible: true
 
-    next_assessment:
+    next_assessment_at:
         label: Assessment
         type: date
         invisible: true
