--- a/updates/version.yaml
+++ b/updates/version.yaml
@@ -6,6 +6,7 @@
     - create_statuses_table.php
     - create_status_logs_table.php
     - create_schedule_table.php
+    - create_notification_logs_table.php
 1.0.2:
     - Seed table data
     - seed_tables.php
