Docs and tweaks

--- a/controllers/memberships/config_relation.yaml
+++ b/controllers/memberships/config_relation.yaml
@@ -17,3 +17,10 @@ notifications:
         list: $/responsiv/subscribe/models/notificationlog/columns.yaml
         recordUrl: responsiv/subscribe/notificationlog/preview/:id
         toolbarButtons: null
+
+status_logs:
+    label: Status Log
+    readOnly: true
+    view:
+        list: $/responsiv/subscribe/models/statuslog/columns.yaml
+        toolbarButtons: null
