--- a/controllers/memberships/config_relation.yaml
+++ b/controllers/memberships/config_relation.yaml
@@ -24,3 +24,4 @@ status_logs:
     view:
         list: $/responsiv/subscribe/models/statuslog/columns.yaml
         toolbarButtons: null
+        defaultSort: created_at
