--- a/controllers/memberships/config_relation.yaml
+++ b/controllers/memberships/config_relation.yaml
@@ -6,6 +6,7 @@ services:
     label: Service
     readOnly: true
     view:
+        scope: applyWithoutActiveService
         list: $/responsiv/subscribe/models/service/columns.yaml
         recordUrl: responsiv/subscribe/services/preview/:id
         toolbarButtons: null
@@ -25,3 +26,11 @@ status_logs:
         list: $/responsiv/subscribe/models/statuslog/columns.yaml
         toolbarButtons: null
         defaultSort: created_at
+
+active_invoices:
+    label: Invoice
+    readOnly: true
+    view:
+        list: $/responsiv/subscribe/models/membership/invoice_columns.yaml
+        recordUrl: responsiv/pay/invoices/preview/:id
+        toolbarButtons: null
