--- a/models/plan/fields.yaml
+++ b/models/plan/fields.yaml
@@ -3,42 +3,66 @@
 # ===================================
 
 fields:
-    is_active:
-        label: Active
-        type: checkbox
-        comment: Uncheck this box to archive this plan.
-        default: true
-
     name:
-        tab: Plan
         span: auto
         label: Name
 
-    code:
-        tab: Plan
+    sku:
         span: auto
-        label: API Code
-        comment: You can use the API Code for accessing the plan via the API.
+        label: SKU
 
 tabs:
     fields:
 
+        is_active:
+            label: Active
+            type: checkbox
+            comment: Uncheck this box to archive this plan.
+            default: true
+            tab: Plan
+
+        short_description:
+            label: Short description
+            type: textarea
+            size: small
+            tab: Plan
+
+        description:
+            label: Long description
+            type: richeditor
+            tab: Plan
+
+        features:
+            label: Features
+            type: repeater
+            tab: Plan
+            form:
+                fields:
+                    name:
+                        label: Feature
+
+        tax_class:
+            tab: Pricing
+            label: Tax Class
+            type: relation
+            emptyOption: - use default -
+
         price:
-            tab: Product
+            tab: Pricing
             label: Price
             comment: Enter the price for each renewal of this subscription.
             type: currency
             span: left
 
         setup_price:
-            tab: Product
+            tab: Pricing
             label: Setup price
             comment: A one time fee added when activating or switching to this plan.
             type: currency
             span: right
 
         plan_type:
-            tab: Product
+            tab: Pricing
             label: Membership schedule
             comment: Please choose a frequency the subscription will be renewed.
             type: dropdown
@@ -46,7 +70,7 @@ tabs:
             span: left
 
         plan_day_interval:
-            tab: Product
+            tab: Pricing
             label: Renewal interval (days)
             comment: Number of days the subscription should run before next renewal.
             dependsOn: plan_type
@@ -54,7 +78,7 @@ tabs:
             span: right
 
         plan_month_interval:
-            tab: Product
+            tab: Pricing
             label: Renewal interval (months)
             comment: Number of months the subscription should run before next renewal.
             dependsOn: plan_type
@@ -62,7 +86,7 @@ tabs:
             span: right
 
         plan_year_interval:
-            tab: Product
+            tab: Pricing
             label: Renewal interval (years)
             comment: Number of years the subscription should run before next renewal.
             dependsOn: plan_type
@@ -70,42 +94,35 @@ tabs:
             span: right
 
         plan_monthly_behavior:
-            tab: Product
+            tab: Pricing
             label: Monthly behavior
             commentAbove: Please select a monthly behavior for the subscription renewal.
             type: radio
             dependsOn: plan_type
 
         plan_month_day:
-            tab: Product
+            tab: Pricing
             label: Day of month
             comment: Please choose a month day the subscription will be renewed on.
             type: dropdown
             dependsOn: [plan_type, plan_monthly_behavior]
 
         renewal_period:
-            tab: Product
+            tab: Pricing
             label: Renewal cycles
             comment: Number of renewal before the subscription ends. Leave the field empty for unlimited renewals.
             dependsOn: plan_type
             type: number
             span: left
 
-        tax_class:
-            tab: Product
-            label: Tax Class
-            type: relation
-            emptyOption: -- use default --
-            span: right
-
         is_custom_membership:
-            tab: Product
+            tab: Pricing
             label: Custom membership rules
             comment: Override settings for new members when selecting this plan.
             type: checkbox
 
         membership_price:
-            tab: Product
+            tab: Pricing
             span: auto
             label: Membership price
             type: currency
@@ -116,7 +133,7 @@ tabs:
                 condition: unchecked
 
         trial_days:
-            tab: Product
+            tab: Pricing
             span: auto
             label: Trial period (days)
             comment: Specify the number of free days given to a new membership.
@@ -126,7 +143,7 @@ tabs:
                 condition: unchecked
 
         grace_days:
-            tab: Product
+            tab: Pricing
             span: auto
             label: Grace period (days)
             comment: Specify the number of days where a plan can be unpaid but still active.
