--- a/models/setting/fields.yaml
+++ b/models/setting/fields.yaml
@@ -2,27 +2,49 @@
 #  Field Definitions
 # ===================================
 
-tabs:
-    fields:
+fields:
 
-        membership_price:
-            label: Membership price
-            type: currency
-            comment: Specify a membership establishment fee for all plans.
+    _section_membership:
+        label: Membership
+        type: section
 
-        trial_days:
-            label: Trial period (days)
-            comment: Specify the number of free days given to a new membership.
+    membership_price:
+        label: Membership price
+        type: currency
+        comment: Specify a membership establishment fee for all plans.
+        span: left
 
-        is_trial_inclusive:
-            label: Inclusive trial period
-            comment: Include the trial as credit towards the first renewal period.
-            type: checkbox
+    _section_trial:
+        label: Trial
+        type: section
 
-        grace_days:
-            label: Grace period (days)
-            comment: Specify the number of days where a plan can be unpaid but still active.
+    trial_days:
+        label: Trial period (days)
+        comment: Specify the number of free days given to a new membership.
+        span: left
 
-        invoice_advance_days:
-            label: Invoice in advance (days)
-            comment: Specify how many days an invoice should be sent before renewal.
+    is_trial_inclusive:
+        label: Inclusive trial period
+        comment: Include the trial as credit towards the first renewal period.
+        type: checkbox
+        span: left
+
+    is_card_upfront:
+        label: Require card upfront
+        comment: A valid card is required to join using a trial.
+        type: checkbox
+        span: left
+
+    _section_invoice:
+        label: Invoicing
+        type: section
+
+    invoice_advance_days:
+        label: Invoice reminder (days)
+        comment: Specify how many days an invoice should be sent before renewal.
+        span: left
+
+    grace_days:
+        label: Grace period (days)
+        comment: Specify the number of days where a membership can be unpaid but still active.
+        span: left
